# opencv2-posture-corrector

./: .gitignore  CMakeLists.txt  README.md  batesposture.spec  main.cpp  main.py  opencv2-posture-corrector.spec  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: build.yml  data-checks.yml
docs/: index.html
scripts/: AppRun  batesposture.desktop  build.sh  build_local.bat  build_local.sh  dist.sh  setup.iss
src/: application.py  database.py  db_manager.py  main.py  notifications.py  onboarding_wizard.py  pose_detector.py  posture_analytics.py  score_history.py  settings.py  settings_dialog.py  settings_interface.py  tray_application.py  tray_interface.py  util__create_score_icon.py  util__database_analytics.py  util__pose_detector.py  util__scores.py  util__send_notification.py  util__settings.py  webcam.py
src/data/: __init__.py  database.py
src/ml/: __init__.py  pose_detector.py
src/services/: __init__.py  camera_service.py  notification_service.py  score_service.py  settings_service.py  task_scheduler.py
src/tests/: test_database.py  test_db_manager.py  test_notification_service.py  test_notifications.py  test_pose_detector.py  test_score_history.py
src/ui/: __init__.py  dashboard.py  onboarding.py  settings_dialog.py  tray.py
