[project]
name = "opencv2-posture-corrector"
version = "0.1.0"
description = "Toolbar application that leverages OpenCV's powerful computer vision capabilities and MediaPipe's pose detection to create an intelligent posture monitoring system. Running discreetly in your system tray, it provides real-time feedback and gentle reminders when your posture needs attention."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mediapipe>=0.10.21",
    "numpy>=1.26.4",
    "opencv-python>=4.11.0.86",
    "plyer>=2.1.0",
    "pre-commit>=4.3.0",
    "psutil>=7.0.0",
    "pyqt6>=6.9.1",
    "pytest>=8.4.1",
]
