[project]
name = "batesposture"
version = "1.0.0"
description = "Discreet system-tray posture monitor powered by MediaPipe and OpenCV."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mediapipe>=0.10.21",
    "numpy>=1.26.4",
    "opencv-python>=4.11.0.86",
    "plyer>=2.1.0",
    "pre-commit>=4.3.0",
    "psutil>=7.0.0",
    "pyqt6>=6.9.1",
]

[dependency-groups]
dev = [
    "pillow>=10.0.0",
    "pre-commit>=4.3.0",
    "pyinstaller>=6.0.0",
    "pytest>=8.4.1",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
filterwarnings = [
    "ignore:Type google._upb._message.*:DeprecationWarning",
]

[tool.uv]
package = false

# Run the app:   uv run python src/main.py
# Run tests:     uv run --group dev python -m pytest
# Install deps:  uv sync --all-groups
